runtime/Gaffer.Runtime.Tests/snapshots/ErrorTests.ProjectionHandlerError_with_event_context.verified.txt
Error in 'Test' handler

Handler threw: boom
    ┌─ 3:31
    │
  1 │ fromAll().when({
  2 │ 	$init: function() { return {}; },
  3 │ 	Test: function(s, e) { throw new Error("boom"); }
    │ 	                             ^ boom
    │
  at Test (projection.js:3:31)
  at projection.js:3:8

Event: 42@s-1
Type:  Test
